--- a/paginas extras/home.html
+++ b/paginas extras/home.html
@@ -53,7 +53,7 @@
                 <h4>Video Aulas Gratuitas</h4>
                 <p>
                 Temos vídeos aulas gratuitas para te ajudar a entender melhor a matéria e facilitar nas atividades práticas]<p>                            
-                <a href="#">Ver mais <i class="ri-arrow-right-line"></i></a>
+                <a href="https://www.youtube.com/@ChemlabOfc">Ver mais <i class="ri-arrow-right-line"></i></a>
             </div>
             <div class="card">
                 <span><i class="ri-bug-line"></i></span>
@@ -61,7 +61,7 @@
                 <p>
                     Está com dificuldades nos estudos de química? Entre em contato com professores e tire suas dúvidas.
                 </p>
-                <a href="#">Ver mais <i class="ri-arrow-right-line"></i></a>
+                <a href="https://www.youtube.com/@ChemlabOfc">Ver mais <i class="ri-arrow-right-line"></i></a>
             </div>
             <div class="card">
                 <span><i class="ri-history-line"></i></span>
@@ -69,7 +69,7 @@
                 <p>
                     Em nossa plataforma temos 3 métodos de aprendizado. Games, vídeos e resumos que podem ajudar nos quiz.
                 </p>
-                <a href="#">Ver mais <i class="ri-arrow-right-line"></i></a>
+                <a href="../paginas extras/categorias.html">Ver mais <i class="ri-arrow-right-line"></i></a>
             </div>
             <div class="card">
                 <span><i class="ri-shake-hands-line"></i></span>
@@ -77,7 +77,7 @@
                 <p>
                     Você quer nos ajudar em nosso projeto? Escreva um e-mail para nós.
                 </p>
-                <a href="#">Ver mais <i class="ri-arrow-right-line"></i></a>
+                <a href="https://www.youtube.com/@ChemlabOfc">Ver mais <i class="ri-arrow-right-line"></i></a>
             </div>
         </div>
     </section>
