adicionando o game, previa

--- a/paginas extras/categorias.html
+++ b/paginas extras/categorias.html
@@ -97,7 +97,7 @@
                 </div>
             </a>
 
-            <a href="" class="link-categoria">
+            <a target="_blank" href="https://dxn1xp.github.io/MagicMaster/" class="link-categoria">
                 <div class="categoria">
                     <img id="game" src="../estilos/imagens/chemlab.jpg" alt="">
                     <h4>Magic Master</h4>
